# voice-enhancer

./: .gitignore  LICENSE  PRIVACY.md  README.md
.github/workflows/: ci.yml
AudioEngine/: CMakeLists.txt
AudioEngine/bridge/: engine_c_api.cpp  engine_c_api.h  module.modulemap
AudioEngine/include/voice_enhancer/: Engine.h  Preset.h  Types.h
AudioEngine/include/voice_enhancer/dsp/: Biquad.h  Compressor.h  DeEsser.h  HighPassFilter.h  Limiter.h  ParametricEQ.h
AudioEngine/src/: Engine.cpp  Preset.cpp
AudioEngine/src/dsp/: Biquad.cpp  Compressor.cpp  DeEsser.cpp  HighPassFilter.cpp  Limiter.cpp  ParametricEQ.cpp
AudioEngine/tests/: test_engine.cpp
VirtualDriver/: CMakeLists.txt  Info.plist  README.md
VirtualDriver/src/: Common.h  Device.cpp  Device.h  Entry.cpp  ObjectRegistry.cpp  ObjectRegistry.h  Plugin.cpp  Plugin.h  Stream.cpp  Stream.h
VoiceEnhancerApp/: Package.swift  project.yml
VoiceEnhancerApp/Sources/: VoiceEnhancer-Bridging-Header.h
VoiceEnhancerApp/Sources/App/: VoiceEnhancerApp.swift
VoiceEnhancerApp/Sources/Audio/: AudioDeviceEnumerator.swift  AudioEngineBridge.swift  MicCapture.swift  VoicePreview.swift
VoiceEnhancerApp/Sources/Models/: AudioDevice.swift  Preset.swift
VoiceEnhancerApp/Sources/Resources/: Info.plist
VoiceEnhancerApp/Sources/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
VoiceEnhancerApp/Sources/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
VoiceEnhancerApp/Sources/ViewModels/: AudioViewModel.swift
VoiceEnhancerApp/Sources/Views/: ContentView.swift  MeterView.swift  PresetCardView.swift  PresetPickerView.swift  SettingsView.swift
docs/: ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md
scripts/: build.sh  install.sh  notarize.sh  uninstall.sh
shared/: RingBuffer.h
tools/: render-file.cpp
